force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>Aspirante</label>
    <nameField>
        <label>Nombre de Aspirante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aspirantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>