force-app/main/default/objects/Candidate__c/fields/Ciudad_de_residencia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_residencia__c</fullName>
    <label>Ciudad de residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ciudad_de_residencia</valueSetName>
    </valueSet>
</CustomField>