force-app/main/default/objects/Candidate__c/fields/Compania_actual__c.field-meta.xml
<CustomField>
    <fullName>Compania_actual__c</fullName>
    <label>Compañía actual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>