force-app/main/default/objects/Candidate__c/fields/Conocimientos_SalesForce__c.field-meta.xml
<CustomField>
    <fullName>Conocimientos_SalesForce__c</fullName>
    <label>Conocimientos de SalesForce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conocimientos_de_SalesForce</valueSetName>
    </valueSet>
</CustomField>