force-app/main/default/objects/Candidate__c/fields/Ext_account__c.field-meta.xml
<CustomField>
    <fullName>Ext_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Destino</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta externa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aspirantes</relationshipLabel>
    <relationshipName>Aspirantes</relationshipName>
    <type>Lookup</type>
</CustomField>