force-app/main/default/objects/Candidate__c/fields/ID_aspirante__c.field-meta.xml
<CustomField>
    <fullName>ID_aspirante__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>ID aspirante</label>
    <type>AutoNumber</type>
</CustomField>