force-app/main/default/objects/Candidate__c/fields/Movilidad_geografica__c.field-meta.xml
<CustomField>
    <fullName>Movilidad_geografica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Movilidad geográfica</label>
    <type>Checkbox</type>
</CustomField>