force-app/main/default/objects/Candidate__c/fields/Nivel_de_ingles__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_ingles__c</fullName>
    <label>Nivel de inglés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>