force-app/main/default/objects/Candidate__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Relacionada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Ext_account__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Aspirantes (Oportunidad Relacionada)</relationshipLabel>
    <relationshipName>Aspirantes1</relationshipName>
    <type>Lookup</type>
</CustomField>