force-app/main/default/objects/Candidate__c/fields/Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidades</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Aspirantes</relationshipLabel>
    <relationshipName>Aspirantes</relationshipName>
    <type>Lookup</type>
</CustomField>