force-app/main/default/objects/Candidate__c/fields/Pais_residencia__c.field-meta.xml
<CustomField>
    <fullName>Pais_residencia__c</fullName>
    <label>País de residencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>