force-app/main/default/objects/Candidate__c/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <label>Puesto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puesto</valueSetName>
    </valueSet>
</CustomField>