force-app/main/default/objects/Candidate__c/fields/Salario_actual__c.field-meta.xml
<CustomField>
    <fullName>Salario_actual__c</fullName>
    <label>Salario actual</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>