force-app/main/default/objects/Candidate__c/fields/Salario_expectativa__c.field-meta.xml
<CustomField>
    <fullName>Salario_expectativa__c</fullName>
    <label>Salario expectativa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>