force-app/main/default/objects/Candidate__c/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sede Destino</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta interna</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aspirantes (Sede)</relationshipLabel>
    <relationshipName>Aspirantes1</relationshipName>
    <type>Lookup</type>
</CustomField>