force-app/main/default/objects/Candidate__c/listViews/Vista.listView-meta.xml
<ListView>
    <fullName>Vista</fullName>
    <columns>ID_aspirante__c</columns>
    <columns>NAME</columns>
    <columns>Apellidos__c</columns>
    <columns>Email__c</columns>
    <columns>Telefono__c</columns>
    <columns>Puesto__c</columns>
    <columns>Conocimientos_SalesForce__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>