force-app/main/default/objects/Candidate__c/listViews/Vista_Test.listView-meta.xml
<ListView>
    <fullName>Vista_Test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Contactado sin avances,Validado OK,Ofertado</value>
    </filters>
    <filters>
        <field>Sede__c</field>
        <operation>equals</operation>
        <value>VASS México</value>
    </filters>
    <label>Aspirantes México</label>
</ListView>